[tool.poetry]
name = "ska-tango-base"
version = "0.19.1"
description = "SKA Tango base classes"
authors = ["SKA India and SARAO and CSIRO and INAF and STFC"]
license = "BSD 3-Clause"
documentation = "https://developer.skatelescope.org/projects/ska-tango-base"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.9.0"
debugpy = "^1.6.2"
numpy = [
    {version = ">=1.21.0", python = ">=3.7,<3.10"},
    {version = ">=1.21.6", python = "3.10"},
    {version = ">=1.23.2", python = "3.11"}
]
pytango = "9.5.0rc3"
ska-ser-logging = "^0.4.1"
transitions = "^0.9.0"
ska-control-model = "^0.3.1"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
pytango = "9.5.0rc3"
black = "^23.3.0"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-builtins = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-use-fstring = "^1.4"
flake8-rst-docstrings = "^0.3.0"
mypy = "^1.4.1"
pep8-naming = "^0.13.3"
pylint = "^2.17.2"
pylint-junit = "^0.3.2"
pytest = "^7.3.1"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.0.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.10.0"
pytest-forked = "^1.6.0"
ska-tango-testing = "^0.5.3"
toml = "^0.10.2"
pytest-pydocstyle = "^2.3.2"
pytest-pycodestyle = "^2.3.1"
types-jsonschema = "^4.17.0.7"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2"
sphinx-autodoc-typehints = "^1.19"
ska-ser-sphinx-theme = "^0.1.1"
jsonschema = "^4.18.3"
ska-control-model = "^0.3.1"
sphinxcontrib-plantuml = "^0.25"
transitions = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
